infra/k8s/overlays/dev/keycloak-dev-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  template:
    spec:
      containers:
        - name: keycloak
          args:
            - start-dev
            - --import-realm
